# bikes-crud

./: docker-compose.yml
db/: 01-init.sh
ducati/: Dockerfile  directive.yaml
ducati/create/: .runnable.yaml  Cargo.toml
ducati/create/src/: lib.rs
ducati/delete/: .runnable.yaml  Cargo.toml
ducati/delete/src/: lib.rs
ducati/read/: .runnable.yaml  Cargo.toml
ducati/read/src/: lib.rs
ducati/reado/: .runnable.yaml  Cargo.toml
ducati/reado/src/: lib.rs
ducati/update/: .runnable.yaml  Cargo.toml
ducati/update/src/: lib.rs
