[package]
name = "create"
version = "0.1.0"
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
suborbital = '0.13.0'
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
